<resources>
    <string name="app_name">T-bank</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_phone_number">Номер телефона</string>
    <string name="hint_password">Пароль</string>
    <string name="login_text">Войти</string>
    <string name="no_account">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="hint_login">Логин</string>
    <string name="login_title">Вход</string>
    <string name="registration_title">Регистрация</string>
    <string name="hint_username">Имя</string>
    <string name="hint_confirm_password">Подтверждение пароля</string>
    <string name="register">Зарегистрироваться</string>
    <string name="create_trip_title">Создание поездки</string>
    <string name="next">Далее</string>
    <string name="name_hint">Название</string>
    <string name="budget_hint">Бюджет</string>
    <string name="start_date_hint">Дата начала</string>
    <string name="date_format_hint">MM/DD/YYYY</string>
    <string name="done">Готово</string>
    <string name="last_name_hint">Фамилия</string>
    <string name="name_error_hint">Длина от 3 до 20 символов</string>
    <string name="password_error_hint">от 8 символов, заглавные и строчные буквы, цифры</string>
    <string name="confirm_password_error_hint">Пароли не совпадают</string>
    <string name="number_error_hint">Введите номер в формате 7XXXXXXXXXX или 8XXXXXXXXXX.</string>
    <string name="name_placeholder">John Doe</string>
    <string name="number_placeholder">+79999999999</string>
    <string name="add_expenses">Добавьте расходы</string>
    <string name="expenses">Траты</string>
    <string name="end_date_hint">Дата конца</string>
    <string name="name_or_number_hint">Номер или имя</string>
    <string name="trip_date_hint">Дата поездки</string>
    <string name="trip_name_error">Название от 3 до 50 символов</string>
    <string name="trip_budget_error">Бюджет не может быть равен 0</string>
    <string name="Create">Создать</string>
    <string name="name_format">%1$s %2$s</string>
    <string name="number_format">+%1$s</string>
    <string name="date_format">%1$s - %2$s</string>
    <string name="retry">Повторить</string>
    <string name="nav_home">Главная</string>
    <string name="nav_profile">Профиль</string>
    <string name="description">Описание</string>
    <string name="add_expense">Добавить расход</string>
    <string name="who_paid">За кого заплатили?</string>
    <string name="for_all">За всех</string>
    <string name="for_self">Только за себя</string>
    <string name="add">Добавить</string>
    <string-array name="categories">
        <item>Выберите категорию</item>
        <item>Билеты</item>
        <item>Отель</item>
        <item>Питание</item>
        <item>Развлечения</item>
        <item>Страховка</item>
        <item>Другие расходы</item>
    </string-array>
    <string name="chart_subtitle_format">/%1$s</string>
    <string name="format_expense">-%1$s ₽</string>
    <string name="format_money">%1$s ₽</string>
    <string name="tickets">Билеты</string>
    <string name="hotels">Отели</string>
    <string name="food">Питание</string>
    <string name="entertainment">Развлечения</string>
    <string name="insurance">Страховка</string>
    <string name="more">Остальное</string>
    <string name="hint_sum">Сумма</string>
    <string name="reject">Отклонить</string>
    <string name="accept">Принять</string>
    <string name="invite">Приглашение</string>
    <string name="nameTv_format">%1$s %2$s</string>
    <string name="iconTv_format">%1$s%2$s</string>
    <string name="loading">Загрузка...</string>
    <string name="invites">Приглашения</string>
    <string name="channel_name">channel</string>
</resources>