<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_trip_title"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/backBtn"
        style="@style/ScreenTitleText"/>

    <EditText
        android:id="@+id/tripNameEt"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv"/>

    <TextView
        android:id="@+id/tripNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ErrorText"
        app:layout_constraintTop_toBottomOf="@id/tripNameEt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:text="@string/trip_name_error"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/dateEt"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/trip_date_hint"
        android:enabled="false"
        android:inputType="date"
        android:drawableEnd="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripBudgetEt"/>

    <ImageButton
        android:id="@+id/dateIb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_calendar"
        app:layout_constraintTop_toTopOf="@id/dateEt"
        app:layout_constraintEnd_toEndOf="@id/dateEt"
        app:layout_constraintBottom_toBottomOf="@id/dateEt"
        android:backgroundTint="@color/transparent"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dateEt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        style="@style/HintText"
        android:text="@string/date_format_hint"/>

    <EditText
        android:id="@+id/tripBudgetEt"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/budget_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripNameEt"/>

    <TextView
        android:id="@+id/tripBudgetError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ErrorText"
        app:layout_constraintTop_toBottomOf="@id/tripBudgetEt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:text="@string/trip_budget_error"
        android:visibility="gone"/>

    <Button
        android:id="@+id/nextBtn"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>